--- a/AboutUs.html
+++ b/AboutUs.html
@@ -58,7 +58,7 @@
     </div>
    </div>
 <!--nav end-->
-<div class="view" style="background-image: url('../img/aboutus-img3.jpg'); background-repeat: no-repeat; background-size: cover; background-position: center; height:100%">
+<div class="view" style="background-image: url('img/aboutus-img3.jpg'); background-repeat: no-repeat; background-size: cover; background-position: center; height:100%">
  <div class="container">
   <div class="row" style="margin-top:50px;">
     <!--aboutus text-->
@@ -149,7 +149,7 @@
         </li>
         <li class="list-inline-item">
           <a class="btn-floating btn-dribbble mx-1">
-            <i class="fa fa-dribbble"> </i>
+            <i class="fa fa-skype"> </i>
           </a>
         </li>
       </ul>
