--- a/index.html
+++ b/index.html
@@ -195,12 +195,12 @@ var marker;
       <h3 class="h1-reponsive white-text text-uppercase font-weight-bold mb-0 pt-md-5 pt-5" data-wow-delay="0.3s"><strong>What we do for you?</strong></h3>
       <div class="container" style=" padding: 58px;">
         <div class="row" style="background-color: white; padding: 40px;">
-        <div class="col-md-4">
+        <div class="col-md-4 col-sm-4">
           <h5 class="text-uppercase mb-4 wow fadeInDown" data-wow-delay="0.4s">
             <span class="what-we-do-center">Services</span></h5>
           <div class="vl"></div>
         </div>
-        <div class="col-md-8">
+        <div class="col-md-8 col-sm-8">
           <ol class="what-we-do-list">
             <li class="text-padding"><i class="fa fa-ship" aria-hidden="true"></i>&emsp;Freight Forwarding / Logistics Service.</li>
             <li class="text-padding"><i class="fa fa-ship" aria-hidden="true"></i>&emsp;Complete Air / Sea Freight /Inland Transportation by Road or Rail.</li>
@@ -216,80 +216,49 @@ var marker;
     </div>
     </div>
      <!--end what we do for you-->
-      <!--contact-->
-    <div style="color: white;">
-      <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-       viewBox="0 0 1440 126" xml:space="preserve">
-      <path class="st0" d="M685.6,38.8C418.7-11.1,170.2,9.9,0,30v96h1440V30C1252.7,52.2,1010,99.4,685.6,38.8z"/>
-      <div class="row contact-margin" style="background-color: #282923; ">
-        <div class="col-md-1"></div>
-        <div class="col-md-4">
-          <div class="hor-bar-white hor-bar-air" id="hor-bar-contact-left"></div>
-          <h4 class="h1-reponsive white-text text-uppercase font-weight-bold mb-0 pt-md-5 pt-5" data-wow-delay="0.3s">contacts</h4>
-          <ol style="list-style: none;">
-            <li><i class="fa fa-map-marker" aria-hidden="true">&emsp;</i>Buddhanagar, New Baneshowr,Kathmandu Nepal</li>
-            <li><i class="fa fa-phone" aria-hidden="true"></i>&emsp;+977-1-4781337</li>
-            <li><i class="fa fa-envelope-o" aria-hidden="true"></i>&emsp;info@sslfreight.com.np</li>
-          </ol>
-        </div>
-        <div class="col-md-6" >
-          maps<i class="fa fa-map-o" aria-hidden="true"></i>
-          <div id="map_canvas">
-        </div>
-      </div>
-      </svg>
-  </div>
-  <!--end contacts-->
+   
   <!-- Footer -->
-<footer class="page-footer font-small special-color-dark contact-margin">
+<footer class="page-footer font-small special-color-dark pt-4 contact-margin">
 
     <!-- Footer Elements -->
     <div class="container">
 
-      <!-- Grid row-->
-      <div class="row">
-
-        <!-- Grid column -->
-        <div class="col-md-12 py-5">
-          <div class="mb-5 flex-center">
-
-            <!-- Facebook -->
-            <a class="fb-ic">
-              <i class="fa fa-facebook fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-            </a>
-            <!-- Twitter -->
-            <a class="tw-ic">
-              <i class="fa fa-twitter fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-            </a>
-            <!-- Google +-->
-            <a class="gplus-ic">
-              <i class="fa fa-google-plus fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-            </a>
-            <!--Linkedin -->
-            <a class="li-ic">
-              <i class="fa fa-linkedin fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-            </a>
-            <!--Instagram-->
-            <a class="ins-ic">
-              <i class="fa fa-instagram fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-            </a>
-            <!--Pinterest-->
-            <a class="pin-ic">
-              <i class="fa fa-pinterest fa-lg white-text fa-2x"> </i>
-            </a>
-          </div>
-        </div>
-        <!-- Grid column -->
-
-      </div>
-      <!-- Grid row-->
+      <!-- Social buttons -->
+      <ul class="list-unstyled list-inline text-center">
+        <li class="list-inline-item">
+          <a class="btn-floating btn-fb mx-1">
+            <i class="fa fa-facebook"> </i>
+          </a>
+        </li>
+        <li class="list-inline-item">
+          <a class="btn-floating btn-tw mx-1">
+            <i class="fa fa-twitter"> </i>
+          </a>
+        </li>
+        <li class="list-inline-item">
+          <a class="btn-floating btn-gplus mx-1">
+            <i class="fa fa-google-plus"> </i>
+          </a>
+        </li>
+        <li class="list-inline-item">
+          <a class="btn-floating btn-li mx-1">
+            <i class="fa fa-linkedin"> </i>
+          </a>
+        </li>
+        <li class="list-inline-item">
+          <a class="btn-floating btn-dribbble mx-1">
+            <i class="fa fa-skype"> </i>
+          </a>
+        </li>
+      </ul>
+      <!-- Social buttons -->
 
     </div>
     <!-- Footer Elements -->
 
     <!-- Copyright -->
-    <div class="footer-copyright text-center py-3">©Copyright:All rights reserved
-      <a href="https://mdbootstrap.com/education/bootstrap/"> SSL Freight.</a>
+    <div class="footer-copyright text-center py-3">© 2018 Copyright:
+      <a href="https://mdbootstrap.com/education/bootstrap/"> MDBootstrap.com</a>
     </div>
     <!-- Copyright -->
 
