--- a/img/SSL Freight.htm
+++ b/img/SSL Freight.htm
@@ -1,55 +1,54 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="utf-8">
+<!-- saved from url=(0071)file:///Users/rashikbariya/Desktop/project_data/SSLFright/Services.html -->
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>SSL Freight</title>
   <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="./SSL Freight_files/font-awesome.min.css">
   <!-- Bootstrap core CSS -->
-  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link href="./SSL Freight_files/bootstrap.min.css" rel="stylesheet">
   <!-- Material Design Bootstrap -->
-  <link href="css/mdb.min.css" rel="stylesheet">
+  <link href="./SSL Freight_files/mdb.min.css" rel="stylesheet">
   <!-- Your custom styles (optional) -->
-  <link href="css/style.css" rel="stylesheet">
-</head>
+  <link href="./SSL Freight_files/style.css" rel="stylesheet">
+<style type="text/css">/* Chart.js */
+@-webkit-keyframes chartjs-render-animation{from{opacity:0.99}to{opacity:1}}@keyframes chartjs-render-animation{from{opacity:0.99}to{opacity:1}}.chartjs-render-monitor{-webkit-animation:chartjs-render-animation 0.001s;animation:chartjs-render-animation 0.001s;}</style></head>
 
 <body>
    <!-- navbar -->
-   <div class ="banner">
-       <nav class="navbar fixed-top navbar-expand-lg navbar-dark pink scrolling-navbar">
+   <div class="banner">
+       <nav class="navbar fixed-top navbar-expand-lg navbar-dark pink scrolling-navbar top-nav-collapse">
         <div class="container">
-          <a class="navbar-brand" href="index.html"><strong>LOGO</strong></a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <a class="navbar-brand" href="file:///Users/rashikbariya/Desktop/project_data/SSLFright/Services.html#"><strong>Navbar</strong></a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item ">
-                <a class="nav-link" href="index.html">Home </a>
+                <a class="nav-link waves-effect waves-light" href="file:///Users/rashikbariya/Desktop/project_data/SSLFright/index.html">Home </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="AboutUs.html">About us</a>
+                <a class="nav-link waves-effect waves-light" href="file:///Users/rashikbariya/Desktop/project_data/SSLFright/AboutUs.html">About us</a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="Services.html">Services <span class="sr-only">(current)</span></a>
+                <a class="nav-link waves-effect waves-light" href="file:///Users/rashikbariya/Desktop/project_data/SSLFright/Services.html">Services <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contacts </a>
+                <a class="nav-link waves-effect waves-light" href="file:///Users/rashikbariya/Desktop/project_data/SSLFright/contact.html">Contacts </a>
               </li>
             </ul>
             <ul class="navbar-nav nav-flex-icons">
               <li class="nav-item">
-                <a class="nav-link"><i class="fa fa-facebook"></i></a>
+                <a class="nav-link waves-effect waves-light"><i class="fa fa-facebook"></i></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link"><i class="fa fa-twitter"></i></a>
+                <a class="nav-link waves-effect waves-light"><i class="fa fa-twitter"></i></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link"><i class="fa fa-instagram"></i></a>
+                <a class="nav-link waves-effect waves-light"><i class="fa fa-instagram"></i></a>
               </li>
             </ul>
           </div>
@@ -61,7 +60,7 @@
 <!--nav end-->
       <!--content-->
        <!-- Full Page Intro -->
-          <div class="view" style="background-image: url('img/cargo.jpg'); background-repeat: no-repeat; background-size: cover; background-position: center center;">
+          <div class="view" style="background-image: url(&#39;img/cargo.jpg&#39;); background-repeat: no-repeat; background-size: cover; background-position: center center;">
            <div class="container">
                  <!--service text-->
               <div class="row" style="margin-top:50px">
@@ -76,24 +75,26 @@
                   <div class="col-md-1"></div>
                    <div class="col-md-10">
                     <ul class="nav nav-tabs nav-justified" id="myTab" role="tablist">
-                      <li class="nav-item">
-                        <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Frights</a>
+                      <li class="nav-item waves-effect waves-light">
+                        <a class="nav-link" id="home-tab" data-toggle="tab" href="file:///Users/rashikbariya/Desktop/project_data/SSLFright/Services.html#home" role="tab" aria-controls="home" aria-selected="false">Frights</a>
                         </li>
-                        <li class="nav-item">
-                          <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Others</a>
+                        <li class="nav-item waves-effect waves-light">
+                          <a class="nav-link active show" id="profile-tab" data-toggle="tab" href="file:///Users/rashikbariya/Desktop/project_data/SSLFright/Services.html#profile" role="tab" aria-controls="profile" aria-selected="true">Others</a>
                         </li>
                       </ul>
-                <div class="tab-content" id="myTabContent">
-                  <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+                <div class="tab-content" id="myTabContent" style="
+    margin-top: 40px;
+">
+                  <div class="tab-pane fade" id="home" role="tabpanel" aria-labelledby="home-tab">
                     <div class="row">
                               <!--card1-->
                     <div class="col-md-4">
                       <div class="card">
                               <!-- Card image -->
                           <div class="view overlay">
-                              <img class="card-img-top" src="https://mdbootstrap.com/img/Mockups/Lightbox/Thumbnail/img%20(67).jpg" alt="Card image cap">
-                              <a href="#!">
-                              <div class="mask rgba-white-slight"></div>
+                              <img class="card-img-top" src="./SSL Freight_files/img (67).jpg" alt="Card image cap">
+                              <a href="file:///Users/rashikbariya/Desktop/project_data/SSLFright/Services.html#!">
+                              <div class="mask rgba-white-slight waves-effect waves-light"></div>
                               </a>
                             </div>
                                   <!-- Card content -->
@@ -103,7 +104,7 @@
                               <!-- Text -->
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                             <!-- Button -->
-                            <a href="#" class="btn btn-primary">Button</a>
+                            <a href="file:///Users/rashikbariya/Desktop/project_data/SSLFright/Services.html#" class="btn btn-primary waves-effect waves-light">Button</a>
                           </div>
                         </div>
                       </div>
@@ -112,9 +113,9 @@
                       <div class="card">
                             <!-- Card image -->
                           <div class="view overlay">
-                            <img class="card-img-top" src="https://mdbootstrap.com/img/Mockups/Lightbox/Thumbnail/img%20(67).jpg" alt="Card image cap">
-                              <a href="#!">
-                              <div class="mask rgba-white-slight"></div>
+                            <img class="card-img-top" src="./SSL Freight_files/img (67).jpg" alt="Card image cap">
+                              <a href="file:///Users/rashikbariya/Desktop/project_data/SSLFright/Services.html#!">
+                              <div class="mask rgba-white-slight waves-effect waves-light"></div>
                               </a>
                             </div>
                           <!-- Card content -->
@@ -124,7 +125,7 @@
                           <!-- Text -->
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                       <!-- Button -->
-                              <a href="#" class="btn btn-primary">Button</a>
+                              <a href="file:///Users/rashikbariya/Desktop/project_data/SSLFright/Services.html#" class="btn btn-primary waves-effect waves-light">Button</a>
 
                         </div>
                       </div>
@@ -134,9 +135,9 @@
                     <div class="card">
                           <!-- Card image -->
                       <div class="view overlay">
-                        <img class="card-img-top" src="https://mdbootstrap.com/img/Mockups/Lightbox/Thumbnail/img%20(67).jpg" alt="Card image cap">
-                            <a href="#!">
-                          <div class="mask rgba-white-slight"></div>
+                        <img class="card-img-top" src="./SSL Freight_files/img (67).jpg" alt="Card image cap">
+                            <a href="file:///Users/rashikbariya/Desktop/project_data/SSLFright/Services.html#!">
+                          <div class="mask rgba-white-slight waves-effect waves-light"></div>
                             </a>
                       </div>
                           <!-- Card content -->
@@ -146,7 +147,7 @@
                           <!-- Text -->
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                       <!-- Button -->
-                            <a href="#" class="btn btn-primary">Button</a>
+                            <a href="file:///Users/rashikbariya/Desktop/project_data/SSLFright/Services.html#" class="btn btn-primary waves-effect waves-light">Button</a>
                         </div>
                       </div>
                     </div>
@@ -155,7 +156,7 @@
 
                           <!--tab2-->
 
-        <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+        <div class="tab-pane fade active show" id="profile" role="tabpanel" aria-labelledby="profile-tab">
            <div class="row">
 
                        <!--card1-->
@@ -163,9 +164,9 @@
             <div class="card">
                                      <!-- Card image -->
             <div class="view overlay">
-                     <img class="card-img-top" src="https://mdbootstrap.com/img/Mockups/Lightbox/Thumbnail/img%20(67).jpg" alt="Card image cap">
-                      <a href="#!">
-                      <div class="mask rgba-white-slight"></div>
+                     <img class="card-img-top" src="./SSL Freight_files/img (67).jpg" alt="Card image cap">
+                      <a href="file:///Users/rashikbariya/Desktop/project_data/SSLFright/Services.html#!">
+                      <div class="mask rgba-white-slight waves-effect waves-light"></div>
                       </a>
                 </div>
                                <!-- Card content -->
@@ -175,7 +176,7 @@
                      <!-- Text -->
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                            <!-- Button -->
-                     <a href="#" class="btn btn-primary">Button</a>
+                     <a href="file:///Users/rashikbariya/Desktop/project_data/SSLFright/Services.html#" class="btn btn-primary waves-effect waves-light">Button</a>
                   </div>
                   </div>
                </div>
@@ -184,9 +185,9 @@
                <div class="card">
                   <!-- Card image -->
                   <div class="view overlay">
-                      <img class="card-img-top" src="https://mdbootstrap.com/img/Mockups/Lightbox/Thumbnail/img%20(67).jpg" alt="Card image cap">
-                       <a href="#!">
-                    <div class="mask rgba-white-slight"></div>
+                      <img class="card-img-top" src="./SSL Freight_files/img (67).jpg" alt="Card image cap">
+                       <a href="file:///Users/rashikbariya/Desktop/project_data/SSLFright/Services.html#!">
+                    <div class="mask rgba-white-slight waves-effect waves-light"></div>
                       </a>
                   </div>
                       <!-- Card content -->
@@ -197,7 +198,7 @@
                                        <!-- Text -->
                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                        <!-- Button -->
-                      <a href="#" class="btn btn-primary">Button</a>
+                      <a href="file:///Users/rashikbariya/Desktop/project_data/SSLFright/Services.html#" class="btn btn-primary waves-effect waves-light">Button</a>
 
               </div>
             </div>
@@ -207,9 +208,9 @@
           <div class="card">
                     <!-- Card image -->
             <div class="view overlay">
-              <img class="card-img-top" src="https://mdbootstrap.com/img/Mockups/Lightbox/Thumbnail/img%20(67).jpg" alt="Card image cap">
-                <a href="#!">
-                <div class="mask rgba-white-slight"></div>
+              <img class="card-img-top" src="./SSL Freight_files/img (67).jpg" alt="Card image cap">
+                <a href="file:///Users/rashikbariya/Desktop/project_data/SSLFright/Services.html#!">
+                <div class="mask rgba-white-slight waves-effect waves-light"></div>
                </a>
             </div>
             <!-- Card content -->
@@ -219,7 +220,7 @@
                   <!-- Text -->
                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                    <!-- Button -->
-                <a href="#" class="btn btn-primary">Button</a>
+                <a href="file:///Users/rashikbariya/Desktop/project_data/SSLFright/Services.html#" class="btn btn-primary waves-effect waves-light">Button</a>
                </div>
              </div>
             </div>
@@ -241,27 +242,27 @@
         <!-- Social buttons -->
         <ul class="list-unstyled list-inline text-center">
           <li class="list-inline-item">
-            <a class="btn-floating btn-fb mx-1">
+            <a class="btn-floating btn-fb mx-1 waves-effect waves-light">
               <i class="fa fa-facebook"> </i>
             </a>
           </li>
           <li class="list-inline-item">
-            <a class="btn-floating btn-tw mx-1">
+            <a class="btn-floating btn-tw mx-1 waves-effect waves-light">
               <i class="fa fa-twitter"> </i>
             </a>
           </li>
           <li class="list-inline-item">
-            <a class="btn-floating btn-gplus mx-1">
+            <a class="btn-floating btn-gplus mx-1 waves-effect waves-light">
               <i class="fa fa-google-plus"> </i>
             </a>
           </li>
           <li class="list-inline-item">
-            <a class="btn-floating btn-li mx-1">
+            <a class="btn-floating btn-li mx-1 waves-effect waves-light">
               <i class="fa fa-linkedin"> </i>
             </a>
           </li>
           <li class="list-inline-item">
-            <a class="btn-floating btn-dribbble mx-1">
+            <a class="btn-floating btn-dribbble mx-1 waves-effect waves-light">
               <i class="fa fa-skype"> </i>
             </a>
           </li>
@@ -284,13 +285,14 @@
 
 
   <!-- JQuery -->
-  <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
+  <script type="text/javascript" src="./SSL Freight_files/jquery-3.3.1.min.js"></script>
   <!-- Bootstrap tooltips -->
-  <script type="text/javascript" src="js/popper.min.js"></script>
+  <script type="text/javascript" src="./SSL Freight_files/popper.min.js"></script>
   <!-- Bootstrap core JavaScript -->
-  <script type="text/javascript" src="js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="./SSL Freight_files/bootstrap.min.js"></script>
   <!-- MDB core JavaScript -->
-  <script type="text/javascript" src="js/mdb.min.js"></script>
-</body>
+  <script type="text/javascript" src="./SSL Freight_files/mdb.min.js"></script><div class="hiddendiv common"></div>
 
-</html>
+
+
+</body></html>
